add default UOM
